# claude-code-history

./: .gitignore  README.md  install.sh  pyproject.toml  test_completer.py  test_config.py  test_preview.py  test_projects.py  test_shell.py
claude_code_history.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: CACHE_GUIDE.md  CLAUDE_CODE_USAGE.md  OPTIMIZATION_REPORT.md  SUMMARY.md
scripts/: claude-code-history.bash  claude-code-history.zsh  install.sh  preview.py
src/: __init__.py  cache.py  cli.py  completer.py  config.py  display.py  fzf_interface.py  history.py  history_optimized.py  history_original.py
tests/: benchmark.py  compare_performance.py  profile_analysis.py  test_performance.py
